[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ContinueButton" type="Button" parent="."]
margin_left = 409.0
margin_top = 176.0
margin_right = 526.0
margin_bottom = 215.0
text = "Continue"

[node name="OptionsButton" type="Button" parent="."]
margin_left = 408.0
margin_top = 237.0
margin_right = 525.0
margin_bottom = 276.0
text = "Options"

[node name="ExitButton" type="Button" parent="."]
margin_left = 408.0
margin_top = 301.0
margin_right = 525.0
margin_bottom = 340.0
text = "Exit Game"

[node name="ConfirmExit" type="Button" parent="."]
visible = false
margin_left = 547.0
margin_top = 301.0
margin_right = 647.0
margin_bottom = 343.0
text = "Confirm"

[node name="OptionsMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ShadersToggle" type="Button" parent="OptionsMenu"]
margin_left = 567.0
margin_top = 241.0
margin_right = 719.0
margin_bottom = 276.0
text = "Noise Effect"

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ConfirmExit" to="." method="_on_ConfirmExit_pressed"]
[connection signal="pressed" from="OptionsMenu/ShadersToggle" to="." method="_on_ShadersToggle_pressed"]
